--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $(function() {
 
   { 
     action: 'type',
-    strings: ["locate thingToDepricateNext"],
+    strings: ["locate thingToDeprecateNext"],
     postDelay: 2000
   }
   
