--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ $(function() {
   { 
     action: 'type',
     strings: ["rm -f /usr/lib64/asterisk/modules/chan_sip.so"],
-    output: '<span class="gray">chan_sip deprecated</span><br>&nbsp;',
+    output: '<span class="gray">permission denied: Goonies never die</span><br>&nbsp;',
     postDelay: 1000
   },
 
